# tasteful

./: .gitignore  CNAME  README.md  package-lock.json  package.json  prebuild.js  tailwind.config.js  updateImagePaths.js  vercel.json
public/: index.html  manifest.json
server/: README.md  main.py  package-lock.json  package.json  pyproject.toml  userDataType.json
server/app/models/: event_quote.py  event_requirements.py  user.py
server/app/routers/: event_quotes.py  event_requirements.py  users.py
server/src/: index.ts
server/src/config/: connection.ts  database.ts
server/src/controllers/: auth.ts  rsvp.ts  teamOuting.ts
server/src/interfaces/: EventQuote.ts  EventRequirements.ts  TeamOuting.ts  User.ts
server/src/models/: eventQuotes.ts  teamOutings.ts  users.ts
server/src/routes/: eventQuotes.ts  users.ts
server/src/utils/: gemini.ts
src/: App.jsx  index.css  index.js
src/Components/Button/: Button.jsx
src/Components/Card/: Card.jsx  EventCard.jsx
src/Components/Filter/: SortAction.jsx
src/Components/Form/: FormCheckList.jsx  FormField.jsx
src/Components/Icon/: Icon.jsx
src/Components/Modal/: Modal.jsx  ModalFind.jsx  ModalSuccess.jsx
src/Components/Nav/: Footer.jsx  Navbar.jsx
src/Layouts/: AuthLayout.jsx  DefaultLayout.jsx
src/Pages/: About.jsx  Contact.jsx  DetailEvent.jsx  DetailRestaurant.jsx  EventsFound.jsx  Faq.jsx  Homepage.jsx  InitialPage.jsx  Payment.jsx  PlanEventForm.jsx  Privacy.jsx  Quotes.jsx  Search.jsx  SecCompare.jsx  Terms.jsx
src/Style/: font.css
src/config/: constants.js
src/context/: EventsContext.jsx
(+11 files in other folders)
